# csvtree

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: bandit.yaml
docs/: ROADMAP.md
src/csvtree/: __init__.py
tests/: conftest.py
