[project]
name = "csvtree"
version = "0.1.0"
description = "Generate JSON structures from CSV data effortlessly."
authors = [
    { name = "Manoah BERNIER", email = "manoah.bernier@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "coverage>=7.8.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
